# ProgettoSO

./: .~lock.relazione.odt#  README.md  relazione.odt
project-adas/: relazione.odt
project-adas/src/: Makefile  brakebywire.c  commonFunctions.c  ecu.c  forwardfacingradar.c  frontwindshieldcamera.c  hmi.c  hmiInput.c  parkassist.c  socketFunctions.c  steerbywire.c  surroundviewcameras.c  throttlebycontrol.c  utility.c  utility.h  utilitySocket.c
project_adas/: CMakeLists.txt
project_adas/src/: Makefile  brake-by-wire  brakebywire  brakebywire.c  commonFunctions.h  ecu  ecu.c  esempio-processi.c  forwardfacingradar  forwardfacingradar.c  forwarding-facing-camera  forwardingfacingradar  forwardingfacingradar.c  front-windshield-camera  frontwindshieldcamera  frontwindshieldcamera.c  functions.c  functions.h  hello_world.c  hmi  hmi.c  hmiInput  hmiInput.c  main.c  makefile  park-assist  parkassist  parkassist.c  socketFunctions.h  steer-by-wire  steerbywire  steerbywire.c  surround-view-camera  surroundviewcamera  surroundviewcamera.c  surroundviewcameras  surroundviewcameras.c  throttle-by-control  throttlebycontrol  throttlebycontrol.c
